# Karen

./: .gitignore  ActionData.py  Actions.py  LICENSE.txt  State.py  Zola 2.py  pyproject.toml  readme.md  setup.py
karen/: actions.py  classify.py  combo.py  compare.py  evaluate.py  getCombo.py  logger.py  output.py  parameters.py  state.py
src/karen/: actions.py  classify.py  combo.py  data.py  evaluate.py  getCombo.py  state.py
tests/: consoleApp.py  discordBot.py
