[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "karen"
dynamic = ["version"]
description = "A tool for analysing Spider-Man's combos in Marvel Rivals"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "EvilDuck14", email = "theevilduck14@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/EvilDuck14/karen#readme"
Issues = "https://github.com/EvilDuck14/karen/issues"
Source = "https://github.com/EvilDuck14/karen"

[tool.hatch.version]
path = "src/karen/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/karen tests}"

[tool.coverage.run]
source_pkgs = ["karen", "tests"]
branch = true
parallel = true
omit = [
  "src/karen/__about__.py",
]

[tool.coverage.paths]
karen = ["src/karen", "*/karen/src/karen"]
tests = ["tests", "*/karen/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
