[project]
name = "karen"
version = "0.0.1"
description = "A tool for analysing Spider-Man's combos in Marvel Rivals"
authors = [
  {name = "EvilDuck14",email = "theevilduck14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py (>=2.5.0,<3.0.0)"
]

[tool.poetry]
package-mode = true
packages = [{include = "karen", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"